# ai-personality-alignment

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  test_two_tower.py
data_pipeline/: main.py
data_pipeline/data_cleaner/: fix_telegram_channels.py  fix_telegram_messages.py  select_subset_telegram.py
data_pipeline/data_pipeline_utils_reddit/: process_reddit_data.py
data_pipeline/transformer/: get_data.py  reddit_transformer.py  reddit_transformer_script.py  telegram_transformer.py  telegram_transformer_script.py  twitter_transformer_script.py
src/schemas/: __init__.py  universal_schema.py
src/train/: __init__.py  data_loader.py  demo.py  evaluation.py  loss.py  model.py  pisa-public_eng_txt_to_annotate.jsonl  trainer.py
src/transformers/: __init__.py  reddit.ipynb  twitter.py  whatsapp.py
src/utils/: __init__.py  hf_upload.py
