[tool.poetry]
name = "ai-personality-alignment"
version = "0.1.0"
description = "Universal User Embeddings: Contrastive Learning for User Representation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "schemas", from = "src"}, {include = "transformers", from = "src"}, {include = "train", from = "src"}, {include = "utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.7"
torch = "^2.1.0"
transformers = ">=4.53.0"
datasets = "^2.16.0"
accelerate = "^0.25.0"
wandb = "^0.16.0"
tqdm = "^4.66.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
lxml = "^4.9.3"
huggingface-hub = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transform-whatsapp = "transformers.whatsapp:main"
train-uue = "train.trainer:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
